[package]
name = "rust-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
mongodb = { version = "2.3.1", default-features = false, features = ["async-std-runtime"] }
serde = "1.0.152"
serde_derive = "1.0.152"
serde_json = "1.0.91"
tokio = { version = "1.25.0", features = ["full"] }
reqwest = { version = "0.11.14", features = ["json"] }
time = "0.3.19"

[profile.release]
panic = 'abort'
codegen-units = 1
opt-level = 3
lto = true